            ---------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

01 August 2014 Alberto Ribon (hadr-proc-V10-00-02)
--------------------------------------------------
- G4HadronElasticProcess : replaced the old method of G4EnergyRangeManager
  (still there but deprecated) with the new one (which uses 
  G4HadronicInteraction::IsApplicable). 

27 June 2014 Peter Gumplinger (hadr-proc-V10-00-01)
- fix bug in call to Reflectivity in MRreflectHigh:
  (1) the arguments were wrong/reversed - Reflectivity(Energy, FermiPot)
      should read Reflectivity(FermiPot,Energy)
  (2) but the 2nd argument should also be Enormal instead of total kin. Energy
- fix Coverity error uninitilized non-static class members in
  G4UCNBoundaryProcess
- make/provide public methods in G4UCNBoundaryProcess for unit-testing of
  the MR model

06 June 2014 Peter Gumplinger (hadr-proc-V10-00-00)
- add G4UCNLoss, G4UCNAbsorption, G4UCNMultiScattering and
  G4UCNBoundaryProcess with G4UCNBoundaryProcessMessenger as well as
  G4UCNProcessSubType and add new dependencies to GNUmakefile and
  CMakeLists
     
19 April 2013 Michel Maire (hadr-proc-V09-06-01)
------------------------------------------------
- modify all processNames to try to get coherence between various packages.
    
17 December 2012 Vladimir Ivantchenko (hadr-proc-V09-06-00)
-------------------------------------------------------
- G4WHadronElasticProcess - removed
- G4HadronElasticProcess - added full printout about hadronic exception 
    inside G4Exception printout (bug#1377 for inelastic process)

06 November 2012 Vladimir Ivantchenko (hadr-proc-V09-05-12)
-------------------------------------------------------